correct minor spacing issue

--- a/less/home.less
+++ b/less/home.less
@@ -6,7 +6,7 @@
 .jumbo-home {
     .jumbo-head;
     z-index: 10;
-    margin-top: 213px;
+    margin-top: 264px;
     margin-left: 8.24%;
     
     @media @phone {
@@ -17,7 +17,7 @@
 }
 
 .top-content {
-    margin-top: 140px;
+    margin-top: 92px;
 
     @media @phone {
         margin-top: 75px;
